fix: move recent projects history on homepage (#232)
* Reposition recent projects below banner.

Centered and bordered the heading.

* Hide scrollbar but keep scroll functionality.

* Revert "chore: test sentry"

This reverts commit 2b2b204aab7362c85186755ce354978ac310b959.

* chore: move container within

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -168,3 +168,16 @@ button a:active {
 	justify-content: space-between;
 	align-items: center;
 }
+
+html {
+	overflow: scroll;
+	overflow-x: hidden;
+}
+::-webkit-scrollbar {
+	width: 0; /* Remove scrollbar space */
+	background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+	background: #ff0000;
+}
